v0.19.0/_sources/gallery/maps/country_polygons.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/maps/country_polygons.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_maps_country_polygons.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_maps_country_polygons.py:


Highlight country, continent and state polygons
===============================================

The :meth:`pygmt.Figure.coast` method can highlight country polygons via the ``dcw``
parameter. It accepts the country code (following the 2-letter
`ISO 3166-1 alpha-2 convention <https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2>`_) or
full country name and can draw its borders and add a color to its landmass. It's also
possible to define multiple countries at once by separating the individual names with
commas.

.. GENERATED FROM PYTHON SOURCE LINES 14-47

.. code-block:: Python

    import pygmt
    from pygmt.params import Axis

    fig = pygmt.Figure()

    fig.coast(
        region=[-12, 32, 34, 72],
        # Lambert Azimuthal Equal Area lon0/lat0/horizon/width
        projection="A10/52/25/6c",
        land="gray",
        water="white",
        frame=Axis(annot=True, tick=True, grid=True),
        dcw=[
            # Great Britain (country code) with seagreen land
            "GB+gseagreen",
            # Italy with a red border
            "IT+p0.5p,red3",
            # Spain with a magenta dashed border
            "ES+p0.5p,magenta4,-",
            # Romania with a black dotted border
            "RO+p0.75p,black,.",
            # Germany with orange land and a blue border
            "DE+gorange+p0.5p,dodgerblue4",
            # France (full country name) with a steelblue border
            "France+p0.5p,steelblue",
            # Norway, Sweden and Finland (multiple countries) with pink
            # land and pink3 borders
            "Norway,Sweden,Finland+gpink+p0.2p,pink3",
        ],
    )

    fig.show()




.. image-sg:: /gallery/maps/images/sphx_glr_country_polygons_001.png
   :alt: country polygons
   :srcset: /gallery/maps/images/sphx_glr_country_polygons_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 48-50

Entire continents can also be highlighted by adding ``"="`` in
front of the continent code to differentiate it from a country code.

.. GENERATED FROM PYTHON SOURCE LINES 50-79

.. code-block:: Python


    fig = pygmt.Figure()

    fig.coast(
        region="d",
        projection="H10c",
        land="gray",
        water="white",
        frame=Axis(annot=True, tick=True, grid=True),
        dcw=[
            # Europe
            "=EU+gseagreen",
            # Africa
            "=AF+gred3",
            # North America
            "=NA+gmagenta4",
            # South America
            "=SA+gorange",
            # Asia
            "=AS+gdodgerblue4",
            # Oceania
            "=OC+gtomato",
            # Antarctica
            "=AN+ggray30",
        ],
    )

    fig.show()




.. image-sg:: /gallery/maps/images/sphx_glr_country_polygons_002.png
   :alt: country polygons
   :srcset: /gallery/maps/images/sphx_glr_country_polygons_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 80-81

If available, states/territories of a country can be highlighted, too.

.. GENERATED FROM PYTHON SOURCE LINES 81-101

.. code-block:: Python


    fig = pygmt.Figure()

    fig.coast(
        region=[-130, -70, 24, 52],
        projection="L-100/35/33/45/12c",
        land="gray",
        shorelines="1/0.5p,gray30",
        borders=["1/0.8p,gray30", "2/0.2p,gray30"],
        frame=True,
        dcw=[
            # Texas with orange fill
            "US.TX+gorange",
            # Kentucky with blue outline
            "US.KY+p1p,blue",
        ],
    )

    fig.show()




.. image-sg:: /gallery/maps/images/sphx_glr_country_polygons_003.png
   :alt: country polygons
   :srcset: /gallery/maps/images/sphx_glr_country_polygons_003.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 6.946 seconds)


.. _sphx_glr_download_gallery_maps_country_polygons.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: country_polygons.ipynb <country_polygons.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: country_polygons.py <country_polygons.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: country_polygons.zip <country_polygons.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
